Fix alignment in navbar on large screens

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
   font-size: 20px;
 }
 
-nav::after {
+nav::before {
   position: absolute;
   top: 0;
   right: 0;
@@ -56,8 +56,7 @@ nav::after {
 
 .nav-link {
   color: #000;
-  padding: 0 1vw;
-  font-size: 1em;
+  font-size: 1.25vw;
 }
 
 .nav-link:hover,
